--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width ,initial-scale=1">
     <title>Expensify App </title>
     <link rel="icon" type="image/png" href="/images/favicon.png">
-    <link rel="stylesheet" type="text/css" href="/styles.css">
+    <link rel="stylesheet" type="text/css" href="/dist/styles.css">
 </head>
 
 <body>
@@ -16,7 +16,7 @@
     <!-- This is My HTML file! changed -->
     <!-- <script src="https://unpkg.com/react@16.0.0/umd/react.development.js"></script> -->
     <!-- <script src="https://unpkg.com/react-dom@16.0.0/umd/react-dom.development.js"></script> -->
-    <script src="/bundle.js"></script>
+    <script src="/dist/bundle.js"></script>
 </body>
 
 </html>
